Use docker meta output

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,13 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
       
+    - name: Docker meta
+      id: docker_meta
+      uses: crazy-max/ghaction-docker-meta@v1
+      with:
+        images: micontainer/elasticsearch-singlenode # list of Docker images to use as base name for tags
+        tag-sha: true # add git short SHA as Docker tag
+
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -36,8 +43,8 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: micontainer/elasticsearch-singlenode:${{ GITHUB_REF#refs/tags/v }}
-          
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
     
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
