--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,11 +2,11 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ master ]
     tags:
       - "v*.*.*"
   pull_request:
-    branches: [ main, master ]
+    branches: [ master ]
 
 jobs:
   build:
